<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_social_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login_2"
    tools:context="com.nextbest.skalkowski.whatwedo.activity.SocialLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/com_facebook_button_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonFacebook"
                    style="@style/buttonBlue"
                    android:text="@string/buttonFacebook" />
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/buttonGoogle"
                    style="@style/buttonRed"
                    android:text="@string/buttonGoogle" />

                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/buttonYellow"
                    android:text="@string/buttonLogin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textColor="@color/whiteOpacityText"
                        android:layout_marginRight="4dp"
                        android:text="@string/textViewNoAccount" />

                    <TextView
                        android:id="@+id/textViewRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/whiteText"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/textViewRegister" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
