<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nextbest.skalkowski.whatwedo.fragments.Settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBarDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:indeterminate="false"
                android:progressDrawable="@drawable/seek_bar_selector"
                android:splitTrack="false"
                android:thumb="@drawable/seek_bar_thumb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewSwitchNotification" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchNotification"
                    style="@style/switchPreferences" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewSwitchVibration" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchVibration"
                    style="@style/switchPreferences" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewSwitchSound" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchSound"
                    style="@style/switchPreferences" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
